Add update files

--- a/hw/hw_02/hw_02作業說明.md
+++ b/hw/hw_02/hw_02作業說明.md
@@ -1,3 +1,5 @@
+# 在這個目錄下建立一個檔案名稱為： "ＨＷ02_學號.ipynb"
+
 地球物理程式作業：重力正演模擬（簡化版與詳盡提示）
 一、 作業目標 (Objective)
 這個作業的目標很簡單：讓你親手體驗地球物理學家如何「猜測」地下的樣子。你只需要修改幾個數字，然後觀察圖形的變化，最終讓一條曲線和一些數據點對齊即可。我們會引導你完成每一步。
