--- a/hw/hw_01/hw_01作業說明.md
+++ b/hw/hw_01/hw_01作業說明.md
@@ -2,4 +2,5 @@
 
 2. 在檔案內分別利用。obspy 及 pygmt 等套件撰寫程式
 
-3. 寫完之後執行下列指令
+3. 寫完之後執行下列指令(請將下列的...改成有意義的內容): 
+sh /workspaces/geophysics-class-2025/./git_all.sh "update ...."
